major update - new showCard logic, split users and admin views, several minor changes

--- a/public/css/bootstrap_customised.css
+++ b/public/css/bootstrap_customised.css
@@ -58,6 +58,11 @@
     background-color: #E80F88!important;
 }
 
+.btn-success {
+    background-color: #7ac705;
+    border-color: #7ac705;
+}
+
 .form-control:focus,
 .btn-danger:focus,
 .btn-danger:active,
