--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -49,7 +49,7 @@
             <div class="row">
                 <div class="col-md-5 offset-md-1 my-5 p-4">
                 <h1 class="jumbotron-heading mb-3">InLege <span class="color-1">Premium</span></h1>
-                <p class="lead">InLege nabízí stovky kartiček zdarma. Pro opravdové fajnšmekry však máme také rozšířenou nabídku kartiček a další funkce jen za pár korun měsíčně.</p>        
+                <p class="lead">InLege nabízí tisíce kartiček zdarma. Pro opravdové fajnšmekry však máme také rozšířenou nabídku kartiček a další funkce jen za pár korun měsíčně.</p>        
             </div>
             </div>
         </div>
