--- a/public/css/card.css
+++ b/public/css/card.css
@@ -187,6 +187,19 @@ body {
     font-size: 1.2em;
 }
 
+.save-star-spinner {
+  color: #E80F88;
+  min-width: 20px;
+  min-height:20px;
+}
+
+#star-div {
+  min-width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .spinner-border-small {
     height: 20px;
     width: 20px;
@@ -207,6 +220,11 @@ body {
        rgba(255,255,255, 0) 80%
     );
     pointer-events: none; /* so the text is still selectable */
+  }
+
+  .white-space {
+    white-space: pre-wrap;
+    line-height: 1;
   }
 
   /*DEMO FINISHED CARD*/
