--- a/views/cards/new.ejs
+++ b/views/cards/new.ejs
@@ -1,31 +1,25 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
     <div class="col-lg-6 offset-lg-3">
-        <h5>Vložit novou kartu do sekce <%= sectionName %> v kategorii <%= category %> </h5>
+        <h4 class="text-center">Vložit novou kartičku</h4>
+        <p class="text-center">do balíčku <%= sectionName %> <span class="text-muted">(<%= category %>)</span></p>
         <form class="row g-3 needs-validation mt-3" novalidate action="/category/<%= category %>/section/<%= sectionId %>/newCard" method="POST">
             <div class="mt-2">
-            <label for="pageA" class="form-label">Strana A</label>
-            <textarea name="pageA" id="pageA" class="form-control" cols="30" rows="4" required></textarea>
+            <label for="pageA" class="form-label text-bold">Přední strana</label>
+            <textarea name="pageA" id="pageA" class="form-control form-borders" cols="30" rows="4" required></textarea>
             <div class="valid-feedback">
                 V pořádku!
             </div>
             </div>
-            <div class="mt-2">
-                <label for="pageB" class="form-label">Strana B</label>
-                <textarea name="pageB" id="pageB" class="form-control" cols="30" rows="8" required></textarea>
+            <div class="mt-4">
+                <label for="pageB" class="form-label text-bold">Zadní strana</label>
+                <textarea name="pageB" id="pageB" class="form-control form-borders" cols="30" rows="8" required></textarea>
                 <div class="valid-feedback">
                 V pořádku!
                 </div>
             </div>
-            <div class="mt-2">
-                <label for="author" class="form-label">Autor</label>
-                <input type="text" class="form-control" id="author" name="author" value="<%= currentUser.email %>" required>
-                <div class="valid-feedback">
-                V pořádku!
-                </div>
-            </div>
-            <div class="col-12 d-flex justify-content-between">
-            <button class="btn btn-danger btn-sm" type="submit">Vložit</button>
-            <a href="/category/<%= category %>/section/<%= sectionId %>/listAllCards">Zobrazit všechny karty</a>
+            <div class="col-12 mb-4">
+            <button class="btn btn-danger btn-sm" type="submit">Vložit kartičku</button>
+            <a href="/category/<%= category %>/section/<%= sectionId %>/listAllCards" class="btn btn-sm btn-outline-danger">Zrušit</a>
             </div>
         </form>
     </div>
