--- a/views/cards/savedCards.ejs
+++ b/views/cards/savedCards.ejs
@@ -109,7 +109,7 @@
                                                         <h2 class="accordion-header">
                                                             <button class="accordion-button collapsed px-4" type="button"
                                                                 data-bs-toggle="collapse" data-bs-target="#flush-<%= card._id %>">
-                                                                <%= card.pageA %>
+                                                                <%- card.pageA %>
                                                             </button>
                                                         </h2>
                                                         <div id="flush-<%- card._id %>" class="accordion-collapse collapse"
