--- a/views/sections/edit.ejs
+++ b/views/sections/edit.ejs
@@ -1,25 +1,35 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
     <div class="col-lg-6 offset-lg-3">
-        <h1>Upravit sekci</h1> 
-        <p>ID sekce: <%= section._id %></p>
+        <h4 class="text-center">Upravit balíček</h4> 
+        <p class="text-center"><%= section.name %> <span class="text-muted">(<%= section.category %>)</span></p>
         <form class="row g-3 needs-validation mt-3" novalidate action="/category/<%= section.category %>/editSection/<%=section._id%>?_method=PUT" method="POST">
             <div class="mt-2">
-                <label for="name" class="form-label">Název</label>
-                <input type="text" name="name" id="name" class="form-control" value="<%= section.name %>" required></input>
+                <label for="name" class="form-label text-bold">Nadpis</label>
+                <input type="text" name="name" id="name" class="form-control form-borders" value="<%= section.name %>" required></input>
                 <div class="valid-feedback">
                     V pořádku!
                 </div>
             </div>
-            <div class="mt-2">
-                <label for="desc" class="form-label">Popis</label>
-                <input type="text" name="desc" id="desc" class="form-control" value="<%= section.shortDescription %>"></input>
+            <div class="mt-4">
+                <label for="desc" class="form-label text-bold">Podnadpis</label>
+                <input type="text" name="desc" id="desc" class="form-control form-borders" value="<%= section.shortDescription %>" required></input>
             </div>
-            <div class="mt-2">
-                <label for="next" class="form-label">ID navazující sekce</label>
-                <input type="text" name="next" id="next" class="form-control" value="<%= section.nextSection %>"></input>
+            <div class="mt-4">
+                <label for="next" class="form-label text-bold">Navazuje na balíček</label>
+                <select class="form-select form-borders" name="previousSection" id="previousSection">
+                    <option value="lastSection">nenavazuje na jiný balíček</option>
+                    <% category.sections.forEach(sec => { %>
+                        <option value="<%= sec._id %>"
+                            <% if(sec.name ===  previousSection.name){ %>
+                                selected
+                            <% } %>
+                        ><%= sec.name %></option>
+                    <% }) %>
+                  </select>
             </div>
             <div class="col-12">
                 <button class="btn btn-danger btn-sm" type="submit">Uložit</button>
+                <a href="/category/<%= section.category %>" class="btn btn-outline-danger btn-sm" type="submit">Zpět na kategorii</a>
             </div>
         </form>
     </div>
